Fix visual glitch on mobile

--- a/src/components/Pathfinder/PathArray/PathArray.module.scss
+++ b/src/components/Pathfinder/PathArray/PathArray.module.scss
@@ -1,5 +1,4 @@
 .root {
-  @include flexCenter(column);
   transition: max-height 0.3s ease, opacity 0.3s ease;
 }
 
